--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -15,3 +15,11 @@ body {
   -o-box-shadow: 0 1px 10px #D9D9D9;
   box-shadow: 0 1px 10px #D9D9D9;
 }
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
