--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -19,6 +19,12 @@ body {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+/* .loading {
+    width: 400px;
+    align-content: center;
+    background: #FDE5DE;
+} */
+
 h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 45px;
