--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -19,11 +19,10 @@ body {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* .loading {
-    width: 400px;
+.loading {
     align-content: center;
-    background: #FDE5DE;
-} */
+    background: #FBCBBD;
+} 
 
 h1 {
     font-family: 'Oswald', sans-serif;
