--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -17,6 +17,7 @@ body {
     align-content: center;
     background-color: #FDE5DE;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 150px;
 }
 
 .loading {
