--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -2,14 +2,60 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap');
 
+.blue {
+    color: #7FA3D5;
+}
+
 body {
     background-color: #FBCBBD;
     font-family: 'Oswald', sans-serif;
 }
 
+.contactBox {
+    align-content: center;
+    width: 300px;
+    background-color: #FDE5DE;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container {
+    display: block;
+    width: 100vw;
+}
+
+.form-control {
+    border: 1px solid #EFB5A8;
+    }
+    
+
 .generate {
     background-color: #FDE5DE;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.green {
+    color: #038871
+}
+
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 45px;
+    color: #605353;
+    text-align: center;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2)
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    color: #605353;
+    text-align: center;
+}
+
+h5 {
+    font-size: 35px;
+    text-align: center;
 }
 
 .home {
@@ -20,17 +66,9 @@ body {
     margin-top: 150px;
 }
 
-.loading {
-    align-content: center;
-    background: #FBCBBD;
-} 
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 45px;
-    color: #605353;
-    text-align: center;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2)
+input {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
 }
 
 label{
@@ -39,21 +77,11 @@ label{
     color: #605353;
 }
 
-input {
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-}
 
-.form-control {
-border: 1px solid #EFB5A8;
-}
-
-.signupB {
-    background-color: #038871;
-    color: #FFF;
-    border-radius: 1.5rem;
+.loading {
     align-content: center;
-}
+    background: #FBCBBD;
+} 
 
 .loginB {
     background-color: #7FA3D5;
@@ -66,29 +94,22 @@ border: 1px solid #EFB5A8;
     background-color: #FDE5DE;
 }
 
-.modal-header {
-    border-bottom: 1px solid #FBCBBD;
-}
-
 .modal-footer {
     border-top: 1px solid #FBCBBD;
 }
 
-
-h5 {
-    font-size: 35px;
-    text-align: center;
+.modal-header {
+    border-bottom: 1px solid #FBCBBD;
 }
 
-.blue {
-    color: #7FA3D5;
+p {
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
 }
 
-.green {
-    color: #038871
-}
-
-.container {
-    display: block;
-    width: 100vw;
+.signupB {
+    background-color: #038871;
+    color: #FFF;
+    border-radius: 1.5rem;
+    align-content: center;
 }
